[package]
name = "ratatui-tag-picker"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
ratatui-core = "0.1.0"
ratatui-widgets = { version = "0.3.0", default-features = false }

[dev-dependencies]
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
