[package]
name = "ratatui-tag-picker"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Ratatui tag picker widget"
repository = "https://github.com/fominok/ratatui-tag-picker"
homepage = "https://github.com/fominok/ratatui-tag-picker"
documentation = "https://docs.rs/ratatui-tag-picker"
keywords = ["ratatui", "tui", "widget", "picker"]
categories = ["command-line-interface"]

[dependencies]
ratatui-core = "0.1.0"
ratatui-widgets = { version = "0.3.0", default-features = false }

[dev-dependencies]
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
